Compilation error fixes